--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^8.1.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
